<resources>
    <string name="app_name">Updater for Spotify</string>
    <string name="action_settings">Settings</string>
    <string name="settings_category_preferences">Preferences</string>
    <string name="installed_version">Installed Version</string>
    <string name="latest_version">Latest Version</string>
    <string name="install_new">Install new version:</string>
    <string name="install">Install</string>
    <string name="have_last_version">You have the latest version available</string>
    <string name="spotify_not_installed">Spotify is not Installed</string>
    <string name="dogfood_not_installed">Doogfood is not Installed</string>
    <string name="error">Error, something went wrong :(</string>
    <string name="no_internet_connection">Connection error, try again later</string>
    <string name="now">now!</string>
    <string name="toast_choose_version">Please select the version you require</string>
    <string name="to_download_spotify_df_remove">To install Spotify Dogfood, you need to remove Spotify (origin). Continue?</string>
    <string name="to_download_spotify_remove">To install Spotify, you need to remove Spotify Dogfood. Continue?</string>
    <string name="up_to_date">Latest version is installed</string>

    <string name="spotify_dogfood">Spotify Dogfood</string>
    <string name="spotify_beta">Spotify Beta</string>
    <string name="spotify">Spotify</string>
    <string name="accept">Accept</string>

    <!--                Notification                  -->
    <string name="update_available">Update Available</string>
    <string name="new_version">New version of</string>
    <string name="available">available!</string>
    <string name="install_now">Install Now</string>
    <string name="downloading_in">in /Download/</string>
    <string name="downloading">Downloading</string>

    <!--                Settings                  -->
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="github">GitHub</string>
    <string name="donate">Donate on PayPal</string>
    <string name="xml_see_on_github">See project on GitHub</string>
    <string name="xml_donate_paypal">Donate to the developer for coffee ♥</string>
    <string name="xml_paypal_link">https://www.paypal.me/2Ra66it</string>
    <string name="xml_github_link">https://github.com/spotify-dogfood</string>
    <string name="latest_version_original">Latest Version of Spotify</string>
    <string name="xml_enable_notification_dogfood">Enable Notifications for Spotify DogFood</string>
    <string name="xml_enable_notification">Enable Notifications for Spotify</string>
    <string name="xml_notification_text_dogfood">You will receive a notification for every new version of Spotify DogFood</string>
    <string name="xml_notification_text_origin">You will receive a notification for every new version of Spotify</string>
    <string name="xml_download_beta_title">Download Spotify Beta</string>
    <string name="xml_download_beta_text">Download the latest version of Spotify Beta</string>
    <string name="if_have_not_beta">If you have installed Spotify is not beta, please delete it, otherwise when installing Spotify Beta you will get an error!</string>
    <string name="if_have_beta">If you have installed Spotify Beta, please delete it, otherwise when installing Spotify you will get an error!</string>
    <string name="if_have_dogfoodc">If you have installed Dogfood CORE, please delete it, otherwise when installing Dogfood Light you will get an error!</string>
    <string name="if_have_dogfood">If you have installed Spotify Dogfood not CORE, please delete it, otherwise when installing Dogfood Core you will get an error!</string>



    <!--                Intro                  -->
    <string name="disable_notifications">Disable notifications</string>
    <string name="intro_choose_question">What version of Spotify do I notify you?</string>
    <string name="intro_welcome_message">Welcome to the Updater for Spotify</string>
    <string name="intro_permission_label">This app needs the storage permission</string>
    <string name="intro_permission_text">This is required only for downloading the Spotify to your device</string>
    <string name="xml_dogfood_title">More about Dogfood</string>
    <string name="xml_dogfood_text">More about Spotify Dogfood on xda-developers</string>
    <string name="notificaion_chanel_name">Jesus Christ, That\'s Jason Bourne!</string>
    <string name="info">Info</string>
    <string name="dfc_is_available">Dogfood Core is available</string>
    <string name="df_light_available">Dogfood Light is available</string>
    <string name="spotify_origin_is_available">Spotify (not Beta) is available</string>
    <string name="spotify_beta_available">Spotify Beta is available</string>

</resources>
