<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autoOrigin"
            android:summary="@string/xml_notification_text_origin"
            android:title="@string/xml_enable_notification" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="downloadBeta"
            android:summary="@string/xml_download_beta_text"
            android:title="@string/xml_download_beta_title" />


    </PreferenceCategory>


    <PreferenceCategory android:title="@string/info">
        <Preference
            android:icon="@drawable/ic_paypal"
            android:key="donatePref"
            android:summary="@string/xml_donate_paypal"
            android:title="@string/donate">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/xml_paypal_link" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_github"
            android:key="githubPref"
            android:summary="@string/xml_see_on_github"
            android:title="@string/github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/xml_github_link" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="verPref"
            android:selectable="true"
            android:summary="0.0"
            android:title="Application version" />

    </PreferenceCategory>
</PreferenceScreen>