<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    >

    <TextView
        android:id="@+id/textWhat"
        android:padding="16dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="What version of Spotify do I have to notify you?"/>



    <LinearLayout
        android:padding="10dp"
        android:id="@+id/layoutChoose"
        android:orientation="horizontal"
        android:layout_below="@+id/textWhat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp">

            <LinearLayout
                android:clickable="true"
                android:id="@+id/layout_choose_sptf_df"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/logo_dogfood"
                android:layout_width="100dp"
                android:layout_height="100dp" />

                <TextView
                    android:padding="16dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/spotify_dogfood"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_choose_sptf_origin"
                android:orientation="vertical"

                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:src="@drawable/logo_origin"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:padding="16dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/spotify"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="end"
        android:layout_below="@+id/layoutChoose"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/btn_accept"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>